--- a/web/src/main/resources/voj.properties
+++ b/web/src/main/resources/voj.properties
@@ -27,8 +27,8 @@ mail.senderName = Verwandlung Online Judge
 jms.broker.url = tcp://localhost:61616
 
 # Web Service Configuration
-url.base = http://localhost:8080/voj
-url.cdn = http://localhost:8080/voj/assets
+url.base = http://45.77.97.219:8080/voj
+url.cdn = http://45.77.97.219:8080/voj/assets
 
 # Version
 build.version = 226111d
